--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -55,7 +55,7 @@ ul {
     text-align: right;
     background-color: var(--main-color-1);
     background-color: transparent;
-    
+    overflow: hidden;
 }
 
 .nav-links ul li {
@@ -70,7 +70,6 @@ ul {
 .nav-links ul li a {
     color: #fff;
     text-decoration: none;
-    background-color: transparent;
     background-color: #46736B;
 }
 
@@ -129,6 +128,7 @@ nav .fa {
     .nav-links ul li {
         display: block;
         background-color: #46736B;
+        overflow: hidden;
     }
     
     .nav-links{
@@ -142,6 +142,8 @@ nav .fa {
         z-index: 2;
         transition: 1s;
         border-bottom-left-radius: 10px;
+        overflow: hidden;
+
     }
 
     nav .fa {
@@ -151,11 +153,13 @@ nav .fa {
         font-size: 22px;
         cursor: pointer;
         background-color: #46736B;
+        overflow: hidden;
     }
 
     .nav-links ul {
         padding: 30px;
         background-color: #46736B;
+        overflow: hidden;
     }
 }
 
@@ -167,146 +171,484 @@ nav .fa {
     color: #000000;
 }
 
+/*----- CARDS -----*/
+
 .card {
-    width: 30vh;
-    height: 40vh;
-    border-radius: 30px;
-    background: #e0e0e0;
-    box-shadow: 2px 2px 2px #bebebe,
-               -2px -2px 1px #ffffff;
-    padding:15px;
-    margin: 5vh;
-    box-sizing: border-box;
-    display: inline-block;
-    transition: 0.2s;
-}
-
-.card p {
-    color: #000000;
-    font-weight: 900;
-    font-size: 3vh;
-}
-
-.card h3 {
-    color: #000000;
-    font-weight: 400;
-}
-
-.card:hover {
-    box-shadow: 5px 5px 10px #8f8f8f,
-               -5px -5px 10px #8e8e8e;
-}
-
-@media (max-width: 700px) {
+    --background: #fff;
+    --cardShadow: rgba(32,33,37,.1);
+    --cardShadowHover: rgba(32,33,37,.06);
+    --cardShadowActive: rgba(32,33,37,.55);
+    --cardBorder: #dbdce0;
+    --cardBorderActive: #1a73e8;
+    --textColor: #202125;
+    --linkColor: #1967d2;
+    --ratingColor: #faab00;
+  }
+  
+  @media (prefers-color-scheme: dark) {
     .card {
-        flex-direction: column;
+      --background: #3c4043;
+      --cardShadow: rgba(0,0,0,.28);
+      --cardShadowHover: rgba(0,0,0,.16);
+      --cardShadowActive: rgba(0,0,0,.55);
+      --cardBorder: #202125;
+      --cardBorderActive: #8ab4f8;
+      --textColor: #e9eaee;
+      --linkColor: #8ab4f8;
     }
-}
+  }
+  
+  .card {
+    width: 250px;
+    height: 350px;
+    aspect-ratio: 2/3;
+    background: var(--background);
+    color: var(--textColor);
+    border: 1px solid var(--cardBorder);
+    padding: 25px;
+    box-shadow: 8px 8px 0 var(--cardShadow);
+    transition: box-shadow .5s, transform .5s;
+    border-radius: 8px;
+    display: inline-block;
+    box-sizing: border-box;
+    transition: 0.2s;
+    margin: 7vh;
+    margin-bottom: 15vh;
+  }
+  
+  .card:hover {
+    transform: translate(-2px, -4px);
+    box-shadow: 16px 16px 0 var(--cardShadowHover);
+  }
+  
+  .card:active {
+    transform: translate(-2px, -4px);
+    border: 2px solid var(--cardBorderActive);
+    box-shadow: 4px 4px 0 var(--cardShadowActive);
+  }
+  
+  .card > .icon,
+  .card > .title,
+  .card > .description {
+    cursor: default;
+    user-select: none;
+  }
+  
+  .card > .title {
+    font-weight: bold;
+  }
+  
+  .card > .description {
+    line-height: 1.5em;
+    min-height: 6em;
+  }
+  
+  .card > .icon {
+    font-size: 3em;
+  }
+  
+  .card > .rating {
+    font-size: 1.5em;
+    margin-bottom: 0.8em;
+    color: var(--ratingColor);
+    font-weight: bold;
+    position: relative;
+    width: max-content;
+  }
+  
+  .card > .rating:before {
+    content: "☆☆☆☆☆";
+  }
+  
+  .card > .rating:after {
+    content: "★★★★★";
+    position: absolute;
+    left: 0;
+    z-index: 0;
+    width: calc(var(--rating) * 1%);
+    overflow: hidden;
+  }
+  
+  .card > .link {
+    margin-bottom: 1rem;
+    color: var(--linkColor);
+    font-size: .8em;
+    font-weight: 600;
+  }
+  
+  /* Optional ~ Link the whole card */
+  .card > .link::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+  
+  .card > .link:after {
+    content: "↗";
+    display: inline-block;
+    margin-left: .3em;
+    transition: transform .3s ease-in-out;
+  }
+  
+  .card:hover > .link:after {
+    transform: translate(.2em, -.2em);
+  }
 
 /*----- CAMPUS -----*/
 
 .campus {
-    width: 70%;
+    width: 100%;
     margin: auto;
     text-align: center;
     padding-top: 50px;
     align-items: center;
 }
 
-.campus p{
-    margin-bottom: 5vh;
-    margin-top: 1vh;
+svg {
+    width: 25px;
 }
 
-.container {
+/* SLIDER */
+
+.slider {
+    height: 100vh;
+    margin-top: -50px;
+    position: relative;
+}
+
+.slider .list .item {
     position: absolute;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    gap: 2em;
-    width: 55%;
-    height: 600px;
-    transition: all 400ms;
-    text-align: center;
-    justify-content: center;
-    box-sizing: border-box;
+    inset: 0 0 0 0;
+    overflow: hidden;
+    opacity: 0;
+    transition: .5s;
 }
 
-@media (max-width: 700px) {
-    .container {
-        grid-template-columns: 3fr 3fr 3fr 3fr 3fr;  
-        width: 80%;
-        text-align: center;
+.slider .list .item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+/* BARRA PRETA AQUIII */
+
+.slider .list .item::after {
+    content: '';
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    background-image: linear-gradient(
+        to top, #000 30%, transparent
+    );
+}
+
+.slider .list .item .content {
+    position: absolute;
+    left: 10%;
+    top: 20%;
+    right: 40%;
+    width: 500px;
+    max-width: 80%;
+    z-index: 1;
+}
+
+.slider .list .item .content p:nth-child(1) {
+    text-transform: uppercase;
+    letter-spacing: 10px;
+}
+
+.slider .list .item .content h2 {
+    font-size: 100px;
+    text-align: center;
+}
+
+.slider .list .item.active {
+    opacity: 1;
+    z-index: 10;
+}
+
+@keyframes showContent {
+    to {
+        transform: translateY(0);
+        filter: blur(0);
+        opacity: 1;
     }
 }
 
-.box {
-    position: relative;
-    background: var(--img) center center;
+.slider .list .item.active p:nth-child(1),
+.slider .list .item.active h2,
+.slider .list .item.item.active p:nth-child(3) {
+    transform: translateY(30px);
+    filter: blur(20px);
+    opacity: 0;
+    animation: showContent .5s .7s ease-in-out 1 forwards;
+}
+
+.slider .list .item.active h2 {
+    animation-delay: 1s;
+}
+
+.slider .list .item.active p:nth-child(3) {
+    animation-duration: 1.3s;
+}
+
+.arrows {
+    position: absolute;
+    top: 30%;
+    right: 50px;
+    z-index: 100;
+}
+
+.arrows button {
+    background-color: #eee5;
+    border: none;
+    font-family: monospace;
+    width: 40px;
+    height: 40px;
+    border-radius: 5px;
+    font-size: x-large;
+    color: var(--main-color-3);
+    transition: .5s;
+}
+
+.arrows button:hover {
+    background-color: var(--main-color-3);
+    color: var(--main-color-8);
+}
+
+.thumbnail {
+    position: absolute;
+    bottom: 50px;
+    z-index: 11;
+    display: flex;
+    gap: 10px;
+    width: 100%;
+    height: 250px;
+    padding: 0 50px;
+    box-sizing: border-box;
+    overflow: auto;
+    justify-content: center;
+}
+
+.thumbnail::-webkit-scrollbar{
+    width: 0;
+}
+
+.thumbnail .item {
+    width: 150px;
+    height: 220px;
+    filter: brightness(.5);
+    transition: .5s;
+    flex-shrink: 0;
+}
+
+.thumbnail .item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.thumbnail .item.active {
+    filter: brightness(1.5);
+}
+
+.thumbnail .item .content {
+    position: absolute;
+    inset: auto 10px 10px 10px;
+}
+
+@media screen and (max-width: 678px) {
+    .thumbnail {
+        justify-content: start;
+    }
+
+    .slider .list .item .content h2 {
+        font-size: 60px;
+    }
+
+    .arrows {
+        top: 10%;
+    }
+}
+
+/*----- cta -----*/
+
+.cta {
+    margin: 200px auto;
+    width: 80%;
+    height: 30vh;
+    background-position: center;
     background-size: cover;
-    transition: all 400ms;
+    border-radius: 10px;
+    text-align: center;
+    padding: 100px 0;
+}
+
+.cta h1 {
+    color: var(--main-color-3);
+    margin-bottom: 40px;
+    margin-top: 8vh;
+    padding: 0;
+    font-weight: 500;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+@media (max-width: 700px) {
+    .cta h1 {
+        font-size: 24px;
+    }
+}
+
+/* --------- FOOTER --------- */
+
+.footer {
+    box-sizing: border-box;
+    letter-spacing: 1px;
+    background-color: var(--main-color-5);
+}
+
+.footer ul {
+    background-color: var(--main-color-5);
+}
+
+.footer-link {
+    text-decoration: none;
+}
+
+footer {
+    width: 90%;
+    color: var(--main-color-3);
+}
+
+#footer_content {
+    background-color: var(--main-color-5);
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    padding: 3rem 3.5rem;
+}
+
+#footer-contacts h1 {
+    margin-bottom: 0.75rem;
+}
+
+#footer_social_media {
+    display: flex;
+    gap: 2rem;
+    margin-top: 1.5rem;
+}
+
+#footer_social_media .footer-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 2.5rem;
+    width: 2.5rem;
+    color: var(--main-color-3);
+    border-radius: 50%;
+    transition: all 0.4s;
+}
+
+#footer_social_media .footer-link i {
+    font-size: 1.25rem;
+}
+
+#footer_social_media .footer-link:hover {
+    opacity: 0.4;
+}
+
+#instagram {
+    background: linear-gradient(#7f37c9, #ff2992, #ff9807);
+}
+
+#facebook {
+    background-color: #4267b3;
+}
+
+#whatsapp {
+    background-color: #25d366;
+}
+
+.footer-list {
+    display: flex;
+    flex-direction: column;
+    gap: 0.75rem;
+    list-style: none;
+}
+
+.footer-list .footer-link {
+    color: var(--main-color-3);
+    transition: all 0.4s;
+}
+
+.footer-list .footer-link:hover {
+    color: var(--main-color-2);
+}
+
+#footer_subscribe {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+}
+
+#footer_subscribe p {
+    color: var(--main-color-3);
+}
+
+#input_group {
+    display: flex;
+    align-items: center;
+    background-color: var(--main-color-8);
+    border-radius: 4px;
+}
+
+#input_group input {
+    all: unset;
+    padding: 0.75rem;
+    width: 100%;
+}
+
+#input_group button {
+    background-color: var(--main-color-1);
+    border: none;
+    color: var(--main-color-3);
+    padding: 0px 1.25rem;
+    font-size: 1.125rem;
+    height: 100%;
+    border-radius: 0px 4px 4px 0px;
+    cursor: pointer;
+    transition: all 0.4s;
+}
+
+#input_group button:hover {
+    opacity: 0.8;
+}
+
+#footer_copyright {
     display: flex;
     justify-content: center;
-    align-items: center;
-    text-align: center;
+    background-color: var(--main-color-8);
+    font-size: 0.9rem;
+    padding: 1.5rem;
+    font-weight: 100;
 }
 
-.box::after {
-    content: attr(data-text);
-    position: absolute;
-    bottom: 20px;
-    background: var(--main-color-8);
-    color: var(--main-color-3);
-    padding: 10px 10px 10px 14px;
-    letter-spacing: 4px;
-    text-transform: uppercase;
-    transform: translateY(60px);
-    opacity: 0;
-    transform: all 300ms;
-    transition: 0.3s;
+@media screen and (max-width: 700px) {
+    #footer_content {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 2rem;
+    }
 }
 
-.container:hover .box {
-    filter: grayscale(100%) opacity(24%);
-}
-
-.box:hover::after {
-    transform: translateY(0);
-    opacity: 1;
-    transition-delay: 400ms;
-}
-
-.container:has(.box-1) {
-    margin-left: 8%;
-}
-
-.container .box:hover {
-    filter: grayscale(0%) opacity(100%);
-}
-
-.container:has(.box-1:hover) {
-    grid-template-columns: 3fr 1fr 1fr 1fr 1fr;
-}
-
-.container:has(.box-2:hover) {
-    grid-template-columns: 1fr 3fr 1fr 1fr 1fr;
-}
-
-.container:has(.box-3:hover) {
-    grid-template-columns: 1fr 1fr 3fr 1fr 1fr;
-}
-
-.container:has(.box-4:hover) {
-    grid-template-columns: 1fr 1fr 1fr 3fr 1fr;
-}
-
-.container:has(.box-5:hover) {
-    grid-template-columns: 1fr 1fr 1fr 1fr 3fr;
-}
-
-.box:nth-child(odd) {
-    transform: translateY(-16px);
-}
-
-.box:nth-child(even) {
-    transform: translateY(16px);
+@media screen and (max-width: 426px) {
+    #footer_content {
+        grid-template-columns: repeat(2, 1fr);
+        padding: 3rem 2rem;
+    }
 }
